--- a/src/components/menu/navmenu.css
+++ b/src/components/menu/navmenu.css
@@ -1,13 +1,30 @@
 
+.nav-bar-main {
+  height: 100%;
+  background-color: rgb(144, 222, 120) !important;
+  box-shadow: 0px 2px 10px 3px rgb(119, 153, 131);
+  max-width: 225px !important;
+  /* width: 225px !important; */
+  flex-basis: 225px !important;
+}
+
+.nav-bar-main ul,li {
+  background-color:rgb(144, 222, 120) !important;
+  color:rgb(47, 103, 60);
+  font-weight: bolder;
+
+}
+.navbar-menu-items {
+  /* padding-left: calc(50% - 16px) !important;
+  padding-right: calc(50% - 16px) !important; */
+}
+
 .nav-bar-icons li{
   line-height: 64px !important;
   height: 64px !important;
+  font-size: x-large !important;
 }
 
-.nav-bar-main {
-  height: 100%;
-
-  background-color: white !important;
-
-  box-shadow: 0px 2px 10px 3px lightslategray;
+.nav-bar-icons span {
+  font-size: x-large !important;
 }
