messing around with teh background and the nav bar

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,10 @@
 }
 
 .ant-layout {
-  background-color: white !important;
+
+  background-color: transparent !important;
+  background-repeat: no-repeat;
+
 }
 
 
