--- a/src/App.css
+++ b/src/App.css
@@ -37,13 +37,13 @@
   }
 }
 
-.ant-layout {
-
+.background {
+  background-image: url('./images/background3.png') !important;
+  background-size:110% 120% !important; 
+  /* background-size: cover !important; */
   background-color: transparent !important;
-  background-repeat: no-repeat;
-
+  background-repeat: no-repeat !important;
 }
-
 
 .nav-menu-container{
   height: 100%;
