--- a/src/components/menu/navmenu.css
+++ b/src/components/menu/navmenu.css
@@ -11,6 +11,7 @@
   height: 100%;
   background-color: var(--white-op) !important;
   box-shadow: 0px 2px 10px 3px rgb(119, 153, 131);
+  border: 0px 2px solid var(--blue);
   max-width: 225px !important;
   /* width: 225px !important; */
   flex-basis: 225px !important;
@@ -20,6 +21,8 @@
   background-color: var(--white-op) !important;
   color:rgb(47, 103, 60);
   font-weight: bolder;
+  margin-top: 0 !important;
+  
 
 }
 .navbar-menu-items {
