--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@ code {
  
 #root {
   height: 100%;
-  background-image: url('./images/background3.png') !important;
+  /* background-image: url('./images/background3.png') !important;
   background-size: 100% 100%;
-  /* background-position: right; */
+  background-position: right; */
 
 }
