--- a/src/components/navheader/navheader.css
+++ b/src/components/navheader/navheader.css
@@ -9,7 +9,7 @@
   --white-op: rgb(253, 254, 255, 0.5);
 }
 .custom-header {
-  background-color: var(--blue) !important;
+  background-color: transparent !important;
   height: 64px !important;
   width: 100%;
 }
