--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
+  background-color: white !important;
 }
 
 code {
@@ -15,6 +15,7 @@ code {
  
 #root {
   height: 100%;
+  background-color:  white !important;
   /* background-image: url('./images/background3.png') !important;
   background-size: 100% 100%;
   background-position: right; */
