--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
  
 #root {
   height: 100%;
-  background-color:  white !important;
+  background:   linear-gradient(to left, rgb(222,111,175),rgb(195,176,226),rgb(175,212,248)) !important;
   /* background-image: url('./images/background3.png') !important;
   background-size: 100% 100%;
   background-position: right; */
