styling styling styling

--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -4,8 +4,23 @@
   margin-top: 5rem;
 }
 
+.individual-cards {
+  /* background-color: black; */
+}
 /* .card-col {
  margin: 5rem;
 } */
 
+/* font-family: 'Gochi Hand', cursive;
+font-family: 'Grape Nuts', cursive;
+font-family: 'Patrick Hand', cursive;
+font-family: 'Rock Salt', cursive;
+font-family: 'Shadows Into Light', cursive; */
+.ant-card-cover {
+  border: 1.75em white solid;
+}
 
+.ant-card-body {
+  padding-top: 0px !important;
+  font-family: 'Shadows Into Light Regular';
+}
