--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: white !important;
+  font-family: 'Cutive Mono', monospace !important;
+  background-color:  rgb(243, 243, 243) !important;
 }
 
 code {
@@ -15,9 +16,6 @@ code {
  
 #root {
   height: 100%;
-  background:   linear-gradient(to left, rgb(222,111,175),rgb(195,176,226),rgb(175,212,248)) !important;
-  /* background-image: url('./images/background3.png') !important;
-  background-size: 100% 100%;
-  background-position: right; */
+  background-color:  rgb(243, 243, 243) !important;
 
 }
