--- a/src/components/navheader/navheader.css
+++ b/src/components/navheader/navheader.css
@@ -14,6 +14,7 @@
   width: 100%;
   background: transparent !important;
 
+
 }
 
 .custom-menu-icon svg{
@@ -28,4 +29,36 @@
   background-color:  transparent !important;
   display: flexbox;
   justify-content: flex-end;
+  font-size: x-large !important;
+  line-height: 48px !important;
+}
+
+.nav-menu  {
+  padding:10px;
+}
+.nav-menu li {
+  margin: -1px 6px;
+}
+
+.nav-menu li a:hover {
+  border-bottom: none;
+  
+}
+.ant-menu-horizontal > .ant-menu-item::after, .ant-menu-horizontal > .ant-menu-submenu::after {
+  border-bottom: none !important;
+}
+
+
+/* .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item:hover::after, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu:hover::after, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-active::after, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-active::after, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-open::after, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-open::after, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-selected::after, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-selected::after {
+  border-bottom: none;
+  border: 2px solid black !important;
+} */
+/* .nav-menu li a.active {
+  border: 2px solid black !important;
+  color: black !important;
+} */
+
+ .ant-menu-item-selected{
+  /* padding: 10px; */
+  border: 2px solid black;
 }
