home page with name and title. styling

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,6 @@ code {
  
 #root {
   height: 100%;
-  background-color:  rgb(243, 243, 243) !important;
-
+  /* background-color:  rgb(243, 243, 243) !important; */
+  /* background-color: white !important; */
 }
