--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -17,8 +17,12 @@
   /* font-weight: bold; */
   margin:0px;
   /* box-shadow: 0px 0px 20px 2px gray !important; */
-  background-color: white !important;
-  border: 3px black solid;
+  /* background-color: white !important; */
+  background-color: rgb(69, 56, 93);
+  color:rgb(175, 165, 240);
+  /* border: 3px black solid; */
+  border-right: 5px solid rgb(46, 48, 69);
+  border-bottom: 5px solid rgb(116, 113, 164);
   padding: 2rem;
   line-height: 7rem;
 
@@ -29,5 +33,6 @@
   align-self:auto;
   line-height: 1.5rem;
   margin-top: 2rem;
-  color:rgb(80, 80, 80);
+  /* color:rgb(80, 80, 80); */
+  color:black;
 }
