--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Cutive Mono', monospace !important;
-  background-color:  rgb(255, 255, 255) !important;
+  /* background-color:  rgb(255, 255, 255) !important; */
+  background-color:  rgb(82,112,165) !important;
 }
 
 code {
@@ -16,6 +17,4 @@ code {
  
 #root {
   height: 100%;
-  /* background-color:  rgb(243, 243, 243) !important; */
-  /* background-color: white !important; */
 }
