--- a/src/components/navheader/navheader.css
+++ b/src/components/navheader/navheader.css
@@ -47,5 +47,19 @@
 
  .ant-menu-item-selected{
   /* padding: 10px; */
-  border: 2px solid black;
+  border: 5px solid  rgb(224,156,150) ;
+
 }
+
+.ant-menu-item-selected a {
+  text-decoration: none !important;
+  color: rgb(23,42,66) !important;
+}
+
+.ant-menu-item a {
+  color:  rgb(23,42,66) !important;
+}
+/* coral rgb(224,156,150)
+lgiht blue rgb(84,112,162)
+medium blue rgb(48,70,114)
+darkest blue rgb(23,42,66) */
