rearrange the contact ingo

--- a/src/components/contactme/contactme.css
+++ b/src/components/contactme/contactme.css
@@ -46,6 +46,7 @@
   text-align:center;
   margin: 2rem;
   color: rgb(23,42,66) ;
+  font-weight: 500;
 }
 /* coral rgb(224,156,150)
 lgiht blue rgb(84,112,162)
