--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,9 @@
 .background {
   background-color: transparent !important;
   /* margin-bottom: 1rem; */
-
+  height: 100%;
+  /* padding: 1rem; */
+  padding: 3rem 0rem;
 }
 
 .entire-page {
